welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: ')' expected but 'else' found.
  }else return false
   ^